# Finney

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .python-version  .secretsignore  README.md  feature_stats.ipynb  pyproject.toml  requirements.txt
.finney/: config  matches
.github/workflows/: publish.yml
.secrets/: config
src/: cli.py  domain_objects.py  search.py
src/finney/data/: context_words.csv
src/models/: decision_tree.py  features.py  intrinsic.py
tests/: noise_generator.py
